--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +11,7 @@
 <body>
     <main>
         <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
 
         </section>
 
